MW-190: Move requisition report to reporting service
